--- a/BaekJoon/BaekJoon/BaekJoon.vcxproj
+++ b/BaekJoon/BaekJoon/BaekJoon.vcxproj
@@ -130,8 +130,7 @@
     <ClInclude Include="01_BackPack.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="01_BackPack.cpp" />
-    <ClCompile Include="x64\test.cpp" />
+    <ClCompile Include="02_1655_SaymiddleGame.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
