--- a/BaekJoon/BaekJoon/BaekJoon.vcxproj.filters
+++ b/BaekJoon/BaekJoon/BaekJoon.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="12_2355_sigma.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
