--- a/BaekJoon/BaekJoon/BaekJoon.vcxproj
+++ b/BaekJoon/BaekJoon/BaekJoon.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="01_BackPack.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="15_2754_Grade.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
